--- a/css.css
+++ b/css.css
@@ -83,3 +83,16 @@ button[type="submit"] {
   background-color: #ffffff;
   border: 1px solid #ddd;
 }
+
+#usuarios-conetactados,#empresasguardadas{
+  display: flex;
+    flex-direction: column;
+  align-items:center ;
+}
+
+button{
+  margin:auto;
+  display: block;
+  margin-top:50px;
+  margin-bottom: 50px;
+}
